# leetcode-sql-50

./: .pre-commit-config.yaml  CITATIONS.md  LICENSE  README.md  problem_1321_data.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: codecov.yml  pre-commit.yml
exercises/: 1148_article-views-i.py  1683_invalid-tweets.py  1757_recyclable-and-low-fat-products.py  197_rising_temperature.py  584_find-customer-referee.py  595_big-countries.py  diamonds.py
problems/: __init__.py  datafusion.py  datasets.py  leetcode.py  pandas.py  polars.py  pyarrow.py  utils.py
tests/: test_datafusion.py  test_leetcode.py  test_pandas.py  test_polars.py  test_problem_params.py  test_pyarrow.py
