[project]
name = "leetcode-sql-50"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Tyler White"},
]
dependencies = [
  "datafusion>=42.0.0",
  "pandas>=2.2.3",
  "polars>=1.19.0",
  "pyarrow==20.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ipykernel==6.29.5",
  "ipython==8.31.0",
  "pre-commit==4.0.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "typing_extensions>=4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
