[project]
name = "leetcode-sql-50"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Tyler White"},
]
dependencies = [
  "datafusion>=42.0.0",
  "pandas>=2.2.3",
  "polars>=1.19.0",
  "pyarrow==21.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ipykernel==6.30.1",
  "ipython==8.31.0",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "typing_extensions>=4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
